Fix overlapping headers on small screens

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 h1,h2,h3,h4 {
     font-family: serif, sans-serif;
-    line-height:1rem;
+    line-height: 1.4rem;
 }
 
 p {
